# sonicms

./: .env.template  .gitignore  LICENSE  README.md  compose.yaml
admin-panel/: Dockerfile  package-lock.json  package.json
admin-panel/src/: App.css  App.jsx  index.css
admin-panel/src/asset/: constants.js
admin-panel/src/component/: PageWrapper.jsx
admin-panel/src/component/modal/: CollectionCreateModal.jsx  CollectionModal.jsx  EntryCreateModal.jsx  EntryModal.jsx
admin-panel/src/lib/: toast.js  useModal.jsx  useService.js
admin-panel/src/screen/: ApiPlayground.jsx  CollectionBuilder.jsx  ContentManager.jsx  HomeScreen.jsx
admin-panel/src/service/: collection.js  entry.js
admin-panel/src/style/: modal.css  screen.css
admin-panel/src/util/: jsonSchema.js  timestamp.js
cms-api/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  setup.linux.sh
cms-api/src/: main.cpp
cms-api/src/app/collection/: collection_controller.cpp  collection_dto.hpp  collection_service.cpp  collection_service.hpp
cms-api/src/app/entry/: entry_controller.cpp  entry_dto.hpp  entry_service.cpp  entry_service.hpp
cms-api/src/database/: database_component.hpp  scylla_db_session.cpp  scylla_db_session.hpp  scylla_db_utils.cpp  scylla_db_utils.hpp
cms-api/src/llm_engine/: llm_engine_component.hpp  onnx.cpp  onnx.hpp  tokenizer.cpp  tokenizer.hpp
cms-api/src/storage/: minio_client.cpp  minio_client.hpp  storage_component.hpp
cms-api/src/utils/: dotenv.cpp  dotenv.hpp  strings.cpp  strings.hpp
cms-api/src/vectordb/: qdrant_client.cpp  qdrant_client.hpp  vectordb_component.hpp
cms-api/test/: json_test.cpp  minio_client_test.cpp  qdrant_client_test.cpp  scylla_db_session_test.cpp  test.hpp
database/: init.cql
